# pathpyG

./: .gitignore  .pre-commit-config.yaml  CNAME  CODE_OF_CONDUCT.md  LICENSE  README.md  dev  mkdocs.yml  plot_tutorial.md  pyproject.toml  test.ipynb  versions.json
.devcontainer/: Dockerfile  devcontainer.json  latex-packages.txt
.github/: texlive.packages  texlive.profile
.github/workflows/: CI.yml  Dockerfile  dockerhub.yml  docs-dev.yml  docs-stable.yml  docs.yml  docstring_testing.yml  full_testing.yml  linting.yml  notebook_testing.yml  semantic-pr-check.yml  template-sync.yml  testing.yml
0.0.0/: 404.html  index.html  index.md  sitemap.xml
0.0.0/about/: index.html
0.0.0/contributing/: index.html
0.0.0/gen_ref_pages/: index.html
0.0.0/overrides/: main.html
0.0.0/tutorial/: index.html
0.0.1/: 404.html  index.html  sitemap.xml
0.0.1-dev+07ebe97/: 404.html  index.html  sitemap.xml
0.0.1-dev+07ebe97/about/: index.html
0.0.1-dev+07ebe97/contributing/: index.html
0.0.1-dev+07ebe97/docker_installation/: index.html
0.0.1-dev+07ebe97/gen_ref_pages/: index.html
0.0.1-dev+07ebe97/getting_started/: index.html
0.0.1-dev+07ebe97/plot_tutorial/: index.html
0.0.1-dev+07ebe97/search/: search_index.json
0.0.1-dev+07ebe97/tutorial/: index.html
0.0.1-dev+1112c66/: 404.html  index.html  sitemap.xml
0.0.1-dev+1112c66/about/: index.html
0.0.1-dev+1112c66/contributing/: index.html
0.0.1-dev+1112c66/docker_installation/: index.html
0.0.1-dev+1112c66/gen_ref_pages/: index.html
0.0.1-dev+1112c66/getting_started/: index.html
0.0.1-dev+1112c66/search/: search_index.json
0.0.1-dev+1112c66/tutorial/: index.html
0.0.1-dev+1c0f547/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1-dev+1c0f547/about/: index.html
0.0.1-dev+1c0f547/contributing/: index.html
0.0.1-dev+1d51868/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1-dev+23db11a/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1-dev+31ad4b4/: 404.html  index.html  sitemap.xml
0.0.1-dev+3484275/: 404.html  index.html  sitemap.xml
0.0.1-dev+380decc/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1-dev+3b03c22/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1-dev+3bf231b/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1-dev+3e730e3/: 404.html  index.html  sitemap.xml
0.0.1-dev+45df3b2/: 404.html  index.html  sitemap.xml
0.0.1-dev+4e429e1/: 404.html  index.html  sitemap.xml
0.0.1-dev+5292e3f/: 404.html  index.html  sitemap.xml
0.0.1-dev+56425f7/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1-dev+5692c0f/: 404.html  index.html  sitemap.xml
0.0.1-dev+572719a/: 404.html  index.html  sitemap.xml
0.0.1-dev+5881d46/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1-dev+5ad0474/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1-dev+5bfdbc9/: 404.html  index.html  sitemap.xml
0.0.1-dev+5c82779/: 404.html  index.html  sitemap.xml
0.0.1-dev+65b7f9a/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1-dev+6dfff61/: 404.html  index.html  sitemap.xml
0.0.1-dev+774abe3/: 404.html  index.html  sitemap.xml
0.0.1-dev+79dd1ae/: 404.html  index.html  sitemap.xml
0.0.1-dev+849b417/: 404.html  index.html  sitemap.xml
0.0.1-dev+8948b95/: 404.html  index.html  sitemap.xml
0.0.1-dev+8ab937f/: 404.html  index.html  sitemap.xml
0.0.1-dev+8bea920/: 404.html  index.html  sitemap.xml
0.0.1-dev+933d8f4/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1-dev+970eed9/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1-dev+976a75e/: 404.html  index.html  sitemap.xml
0.0.1-dev+a0c4ecb/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1-dev+a228c1b/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1-dev+a50ef6a/: 404.html  index.html  sitemap.xml
0.0.1-dev+a9e3c99/: 404.html  index.html  sitemap.xml
0.0.1-dev+aabfabe/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1-dev+ac8164e/: 404.html  index.html  sitemap.xml
0.0.1-dev+acf0f30/: 404.html  index.html  sitemap.xml
0.0.1-dev+bda68fd/: 404.html  index.html  sitemap.xml
0.0.1-dev+bef9ff2/: 404.html  index.html  sitemap.xml
0.0.1-dev+c0a9bfd/: 404.html  index.html  sitemap.xml
0.0.1-dev+c341dad/: 404.html  index.html  sitemap.xml
0.0.1-dev+cd8d713/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1-dev+d368dcd/: 404.html  index.html  sitemap.xml
0.0.1-dev+d36e5fe/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1-dev+d787e18/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1-dev+d85fc9d/: 404.html  index.html  sitemap.xml
0.0.1-dev+dc5aaca/: 404.html  index.html  sitemap.xml
0.0.1-dev+dedc727/: 404.html  index.html  sitemap.xml
0.0.1-dev+e254cff/: 404.html  index.html  sitemap.xml
0.0.1-dev+f0286a7/: 404.html  index.html  sitemap.xml
0.0.1-dev+hash/: 404.html  index.html  sitemap.xml
0.0.1-dev+manual/: 404.html  index.html  sitemap.xml
0.0.1-devf8a5354/: 404.html  index.html  sitemap.xml
0.0.2/: 404.html  index.html  sitemap.xml
0.0.2-dev/: 404.html  index.html  objects.inv  sitemap.xml
0.0.2-dev+49b79ba/: 404.html  index.html  sitemap.xml
0.0.2-dev+56a61c8/: 404.html  index.html  sitemap.xml
0.0.2-dev+63b120e/: index.html  sitemap.xml
0.0.2-dev+9dad0a0/: 404.html  index.html  sitemap.xml
0.0.2-dev+aedaa6e/: 404.html  index.html  sitemap.xml
0.0.2-dev+b355f05/: 404.html  index.html  objects.inv  sitemap.xml
0.0.2-dev+eb5b2bb/: 404.html  index.html  sitemap.xml
0.0.2-dev+eb783e0/: 404.html  index.html  sitemap.xml
0.0.2-dev+manual/: 404.html  index.html  sitemap.xml
0.1.0-dev/: 404.html  index.html  index.md  objects.inv  sitemap.xml
0.2.0-dev/: 404.html  gen_ref_pages.py  index.html  objects.inv  sitemap.xml
dev/: 404.html  index.html
docs/: about.md  contributing.md  gen_ref_pages.py  getting_started.md  index.md  plot_tutorial.md  tutorial.md
paper/: pathpyG_paper_plots.ipynb
src/: manim_tutorial_notebook.ipynb  test_manim.ipynb  testfile_private.py
tests/: conftest.py  test_graph.py  test_higher_order_graph.py  test_hist.py  test_paths.py  test_plot.py
(+4162 files in other folders)
